<resources>
    <string name="app_name">TURVIST</string>
    <string name="facebook_app_id">310706023185279</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb310706023185279</string>

    <string name="com.twitter.sdk.android.CONSUMER_KEY">J2C0ZFFfSh5h3MqIxf9oc22RF</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">XFUTRADLeu3C1Z8pvK94deTchaNQgTAbw9uacdTHinMXBM2aKM</string>



    <string name="Quote">Welcome to TURVIST</string>
    <string name="what_want">Please select waht you want</string>
    <string name="super_deals">Super Deal</string>
    <string name="Proceed_Book">Proceed to Book</string>
    <string name="single">Single</string>
    <string name="doub">Double</string>
    <string name="Purchase">Purchase</string>
    <string name="pick_your_target_date_from_here">Pick your target date from here</string>
    <string name="booking">Booking</string>
    <string name="offers">Offers</string>
    <string name="svago">TURVIST</string>
    <string name="manage">Manage</string>
    <string name="my_profile">My Profile</string>
    <string name="origin">Origin</string>
    <string name="enter_distination">Enter Distination</string>
    <string name="one_way">One Way</string>
    <string name="round_trip">Round Trip</string>
    <string name="multi_city">Multi City</string>
    <string name="hotel">Hotel</string>
    <string name="car">Car</string>
    <string name="flight">Flight</string>

    <string name="ticket_status">Ticket Status</string>
    <string name="refferance">Refferance</string>
    <string name="e_ticket">e-Ticket</string>
    <string name="terminal">Terminal</string>
    <string name="gate">Gate</string>
    <string name="payment_success">Payment Success!</string>
    <string name="details">Details</string>
    <string name="booking_information">Booking Information</string>
    <string name="personal_information">Personal Information</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="phone">Phone No</string>
    <string name="email">Email</string>
    <string name="promo_code">Promo Code</string>
    <string name="f_b_details">Flight and Baggage details</string>
    <string name="SignUpwithSVAGO">SignUp with TURVIST  :</string>
    <string name="name">Name</string>
    <string name="country">Country</string>
    <string name="password">Password</string>
    <string name="haveaccount">Have an account ?</string>
    <string name="login_now">Login Now</string>
    <string name="requiredField">Required Field</string>
    <string name="LoginToYourAccount">Login To Your Account :</string>
    <string name="ForgetPassword">Forget Password ?</string>
    <string name="Donthaveaccount">Don\'t have an account ?</string>
    <string name="more">More</string>
    <string name="save">Save</string>
    <string name="withDriver">With Driver</string>
    <string name="noDriver">No Driver</string>
    <string name="SignUp_Now">SignUp Now</string>
    <string name="location">Location</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="description">Description</string>
    <string name="budget">Budget</string>
    <string name="title_activity_maps">Map</string>
    <string name="pleaseOpenGPS">Please Open GPS</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="map">Map</string>
    <string name="no_detected_address">No detected address</string>
    <string name="get_location">Get Location</string>
    <string name="required_field">Required Field</string>
    <string name="guide_requested">Guide requested</string>
    <string name="contact_us">Contact Us</string>
    <string name="language">Language</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="about">About Us</string>
    <string name="logout">Logout</string>
    <string name="version">Version</string>
    <string name="profile">Profile</string>

    <string name="send">send</string>
    <string name="message">Message</string>
    <string name="select_your_language">Select Your Language :</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="turkish">Turkish</string>

    <string name="days_with">Days with :</string>
    <string name="currencies">Currencies</string>
    <string name="sent_success">The message sent successfully</string>
    <string name="number_of_tickets">Number Of Tickets</string>
    <string name="day">Day</string>
    <string name="edit">Edit</string>
    <string name="cars">Cars</string>
    <string name="trips">Trips</string>
    <string name="guides">Guides</string>
    <string name="my_orders">My Orders</string>
    <string name="no_previous_flights">No previous flights ):</string>
    <string name="not_available_now">Not available now</string>

    <string name="login_alert">Login Alert</string>
    <string name="the_requested_operation_requires_a_login_log_on_to_continue">The requested operation requires a login log on to continue</string>
    <string name="log">Login</string>
    <string name="cancel">Cancel</string>
    <string name="skip"><u>Skip</u></string>
    <string name="password_must_be">Password must be larger than 8 character</string>
    <string name="guide">Guide</string>
    <string name="submit">Submit</string>
    <string name="choose_currency">Choose currency !</string>
    <string name="currency_changed_successfully">Currency changed successfully</string>
    <string name="no_trips">No trips :(</string>
    <string name="your_email">Your email</string>
    <string name="check_your_email_inbox">Check your email inbox</string>
    <string name="error">Error :</string>
    <string name="required_fielddd">Required field</string>
    <string name="code">Code</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="takephot">Take Photo</string>
    <string name="choocegallary">Choose Form Gallery</string>
    <string name="cancel_dialog">Cancel Dialog</string>
    <string name="add_photo">Add Photo</string>
    <string name="choose_photo">Choose Photo</string>
    <string name="choosegallery">Choose Form Gallery</string>
    <string name="not_equal">Not equal !</string>
    <string name="select_photo">Select photo</string>
    <string name="Choose_country">Choose country</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pho">Phone</string>
    <string name="nationality">Nationality</string>
    <string name="type">Type</string>
    <string name="budget_from">Budget(From)</string>
    <string name="budget_to">Budget(To)</string>
    <string name="religious">Religious</string>
    <string name="culture">Cultural</string>
    <string name="Entertainment">Entertainment</string>
    <string name="haj">Haj</string>
    <string name="Trip_requested_successfully">Trip requested successfully</string>
    <string name="vip_trips">Vip Trips</string>
    <string name="cancelll">Cancel</string>
    <string name="share">Share</string>
    <string name="order_canelled">Order Cancelled</string>
    <string name="cancelled">cancelled</string>
    <string name="url_is_copied">Url is copied</string>
    <string name="log_in_with_facebook">Log in with facebook</string>
    <string name="turvist_offers">Turvist Offers</string>

</resources>
