<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >

    <item android:id="@+id/booking"
        android:title="@string/booking"
        android:icon="@drawable/ic_tickets"/>

    <item android:id="@+id/offers"
        android:title="@string/offers"
        android:icon="@drawable/ic_offers"/>

    <item android:id="@+id/svago"
        android:title="@string/svago"
        android:icon="@drawable/ic_icon"/>

    <item android:id="@+id/guide"
        android:title="@string/guide"
        android:icon="@drawable/ic_credit_cards"/>

    <item android:id="@+id/more"
        android:title="@string/more"
        android:icon="@drawable/ic_more"/>



</menu>