<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".SidePackage.LanguagePackage.LanguageFragment">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="10dp"
        android:text="@string/select_your_language"
        />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:text="@string/english"
        android:textColor="@color/colorBlack"
        android:textSize="16sp"
        android:id="@+id/English"
        android:gravity="center_vertical"
        android:padding="10dp"
        />
    <TextView
        android:id="@+id/Arabic"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:text="@string/arabic"
        android:textColor="@color/colorBlack"
        android:textSize="16sp"
        android:gravity="center_vertical"
        android:padding="10dp"
        />

    <TextView
        android:id="@+id/Turkish"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:text="@string/turkish"
        android:textColor="@color/colorBlack"
        android:textSize="16sp"
        android:gravity="center_vertical"
        android:padding="10dp"
        />


</LinearLayout>