<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="220dp"
    app:cardCornerRadius="15dp"
    android:layout_margin="15dp"
    app:cardElevation="8dp"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/login_alert"
            android:textColor="@color/colorBlack"
            android:layout_marginTop="15dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:textAlignment="center"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/the_requested_operation_requires_a_login_log_on_to_continue"
            />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:orientation="horizontal"
            android:layout_marginTop="45dp"
            >

            <Button
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:background="@color/colorPrimary"
                android:text="@string/log"
                android:id="@+id/login"
                android:textColor="@color/colorWhite"
                />


            <Button
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:background="@drawable/shape_border"
                android:layout_margin="5dp"
                android:id="@+id/cancel"
                android:textColor="@color/colorPrimary"
                android:text="@string/cancel"
                />


        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>