<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/rel"
    android:background="@color/colorWhite"
    tools:context=".SidePackage.ContactUsPackage.ContactUsFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

    <EditText
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/shape_edit_txt"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="40dp"
        android:hint="@string/name"
        android:id="@+id/EdtName"
        android:padding="8dp"
        android:layout_marginBottom="20dp"
        />

        <EditText
            android:id="@+id/EdtEmail"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/shape_edit_txt"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:hint="@string/email"
            android:padding="8dp"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="20dp"
            />

        <EditText
            android:id="@+id/EdtMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_edit_txt"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:hint="@string/message"
            android:padding="12dp"
            android:gravity="start|top"
            android:lines="8"
            android:layout_marginBottom="20dp"
            />

    </LinearLayout>


    <Button
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:elevation="15dp"
        android:id="@+id/send"
        android:background="@color/colorPrimary"
        android:text="@string/send"
        android:textColor="@color/colorWhite"
        />


</RelativeLayout>