<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:background="@color/colorWhite"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SidePackage.ProfilePackage.ProfileActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:id="@+id/toolbar"
        >

        <ImageView
            android:layout_width="50dp"
            android:src="@drawable/ic_left_arrow"
            android:padding="13dp"
            android:layout_height="match_parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/profile"

            />


        <ImageView
            android:padding="10dp"
            android:id="@+id/imgEdit"
            android:layout_width="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_eye_open"/>


    </RelativeLayout>


    <LinearLayout
        android:layout_marginTop="75dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:orientation="vertical"
        android:gravity="center|top"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <TextView
            android:gravity="center|start"
            android:lines="1"
            android:inputType="text"
            android:id="@+id/edtName"
            android:paddingStart="15dp"
            android:hint="@string/name"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_gray"
            android:layout_width="match_parent"
            android:layout_height="40dp" />


        <TextView
            android:gravity="center|start"
            android:lines="1"
            android:inputType="text"
            android:id="@+id/edtEmail"
            android:paddingStart="15dp"
            android:hint="@string/email"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_gray"
            android:layout_width="match_parent"
            android:layout_height="40dp" />


        <TextView
            android:gravity="center|start"
            android:lines="1"
            android:inputType="text"
            android:id="@+id/edtCountry"
            android:paddingStart="15dp"
            android:hint="@string/country"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_gray"
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <TextView
            android:gravity="center|start"
            android:inputType="number"
            android:id="@+id/edtPhone"
            android:paddingStart="15dp"
            android:hint="@string/phone"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_gray"
            android:layout_width="match_parent"
            android:layout_height="40dp" />


    </LinearLayout>


</LinearLayout>