<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:fillViewport="true"
    android:background="@color/colorWhite"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AuthPackage.RegisterActivity"
    xmlns:custom="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_alignParentBottom="true"/>
        <LinearLayout
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:orientation="vertical"
            android:gravity="center|top"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:src="@drawable/ic_logo"
                android:layout_margin="20dp"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center|top"/>

            <TextView
                android:layout_gravity="start"
                android:gravity="start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="9.3sp"
                android:textColor="#cf0066"
                android:letterSpacing="-0.02"
                android:lineSpacingExtra="2sp"
                android:text="@string/SignUpwithSVAGO"
                />

            <EditText
                android:lines="1"
                android:inputType="text"
                android:id="@+id/edtName"
                android:paddingStart="15dp"
                android:hint="@string/name"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_gray"
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <EditText
                android:lines="1"
                android:inputType="text"
                android:id="@+id/edtCountry"
                android:paddingStart="15dp"
                android:hint="@string/country"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_gray"
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <EditText
                android:inputType="number"
                android:id="@+id/edtPhone"
                android:paddingStart="15dp"
                android:hint="@string/phone"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_gray"
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <EditText
                android:inputType="textEmailAddress"
                android:id="@+id/edtEmail"
                android:paddingStart="15dp"
                android:hint="@string/email"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_gray"
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <RelativeLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="40dp">
                <EditText
                    android:inputType="textPassword"
                    android:id="@+id/edtPassword"
                    android:paddingStart="15dp"
                    android:hint="@string/password"
                    android:background="@drawable/shape_gray"
                    android:layout_width="match_parent"
                    android:layout_height="40dp" />

                <ImageView
                    android:id="@+id/imgShow"
                    android:padding="5dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_eye_open"
                    android:layout_alignParentEnd="true"
                    android:layout_width="wrap_content"
                    android:layout_height="22dp" />
            </RelativeLayout>

            <android.support.v7.widget.CardView
                android:id="@+id/cartRegister"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_margin="25dp"
                custom:cardElevation="10dp"
                custom:cardBackgroundColor="@color/colorPink1"
                custom:cardCornerRadius="25dp"
                >

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_tick"
                    android:tint="@color/colorWhite"
                    />

            </android.support.v7.widget.CardView>

            <RelativeLayout
                android:padding="5dp"
                android:gravity="center|top"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:textColor="@color/colorBlack"
                        android:text="@string/haveaccount"
                        />
                    <TextView
                        android:id="@+id/txtLogin"
                        android:padding="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:textColor="@color/colorPink1"
                        android:text="@string/login_now"
                        />
                </LinearLayout>


            </RelativeLayout>

        </LinearLayout>
    </RelativeLayout>

</ScrollView>