<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".AuthPackage.ForgetPasswordActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_email"
        android:id="@+id/e"
        android:layout_marginTop="55dp"
        android:layout_marginStart="30dp"
        android:textColor="@color/colorBlack"/>

    <EditText
        android:lines="1"
        android:inputType="textEmailAddress"
        android:id="@+id/edtEmail"
        android:padding="10dp"
        android:hint="@string/email"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_below="@+id/e"
        android:background="@drawable/shape_gray"
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <Button
        android:layout_width="120dp"
        android:layout_height="35dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/edtEmail"
        android:layout_marginTop="80dp"
        android:textColor="@color/colorWhite"
        android:text="@string/send"
        android:id="@+id/send"
        android:background="@drawable/shape_btn_book"
        />

    <ImageView
        android:layout_marginBottom="-35dp"
        android:paddingEnd="-15dp"
        android:paddingStart="-30dp"
        android:scaleType="fitXY"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentBottom="true"
        android:src="@drawable/ic_group"
        android:paddingRight="-30dp"
        android:paddingLeft="-40dp" />


</RelativeLayout>